[#noissue] Update File Path - 다양한 교육 모두 한 곳에 집중  필요. - BasicEducation으로 옮김

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -32,7 +32,7 @@
 
 -> 모두 개념 정리 완료!, 이제 코드 분석할 것
 
-* [C++ 17 공부](/contents/cpp17.md)
+* [C++ 17 공부](/contents/BasicEducation/cpp17.md)
 
 ### 해야 할 것
 
@@ -47,7 +47,7 @@
 
 * IFC Geometry Converter
   * Code 조금 분석   
-* [C++ 17 공부](/contents/cpp17.md)
+* [C++ 17 공부](/contents/BasicEducation/cpp17.md)
 
 
 ### 해야 할 것
@@ -63,9 +63,9 @@
 
 * IFC Geometry Converter
   * Code, 구조 분석
-* [C++ 17 공부 끝](/contents/cpp17.md)
-* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
-* [Visual Basic Set](/contents/VisualCodeBasicSet.md)
+* [C++ 17 공부 끝](/contents/BasicEducation/cpp17.md)
+* [C++ Basic](/contents/BasicEducation/CppBasic.md), smart pointer 추가하기
+* [Visual Basic Set](/contents/BasicEducation/VisualCodeBasicSet.md)
 
 
 ### 해야 할 것
@@ -81,7 +81,7 @@
 
 * IFC Geometry Converter
   * Code 직접 짜기, 구조 분석
-* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
+* [C++ Basic](/contents/BasicEducation/CppBasic.md), smart pointer 추가하기
 
 
 ### 해야 할 것
@@ -99,7 +99,7 @@
 
 * IFC Geometry Converter
   * Code 개발 중
-* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
+* [C++ Basic](/contents/BasicEducation/CppBasic.md), smart pointer 추가하기
 
 
 ### 해야 할 것
@@ -114,7 +114,7 @@
 
 * IFC Geometry Converter
   * Code 개발 중
-* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
+* [C++ Basic](/contents/BasicEducation/CppBasic.md), smart pointer 추가하기
 * IFCQuery Open Source Contribute
 * Clean Code
 
@@ -132,7 +132,7 @@
 
 * IFC Geometry Converter
   * Code 개발 중
-* [C++ Basic](/contents/CppBasic.md), smart pointer 완료
+* [C++ Basic](/contents/BasicEducation/CppBasic.md), smart pointer 완료
 * Clean Code
 
 
@@ -150,7 +150,7 @@
 
 * IFC Geometry Converter
   * 중간 완료, 테스트 코드 작성
-* [C++ Basic](/contents/CppBasic.md)
+* [C++ Basic](/contents/BasicEducation/CppBasic.md)
   * C++ Getter, Setter
   * Random header
   * Regex header
@@ -287,7 +287,7 @@ static으로 선언됐기 때문에 ptr이 계속 살아있는다.
 
 * IFC Geometry Converter
   * 테스트 코드 작성
-* [Commit Message Rule](/contents/commit.md)
+* [Commit Message Rule](/contents/BasicEducation/commit.md)
 
 
 ### 해야 할 것
