--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -397,6 +397,7 @@ Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.
   * 1D Member
   * Refactoring
 * Feature Solid
+* Clean Code
 
 ### 해야 할 것
 
@@ -406,7 +407,9 @@ Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.
 * Analytics Line
 * Cpp Basic
   * Thread
-  * async future
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
 * Cpp17
   * filesystem
-
+* boost
+  * asio
+  * multi_index
