[#noissue] Update today studying

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -413,3 +413,27 @@ Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.
 * boost
   * asio
   * multi_index
+
+
+<br/>
+
+## 11.28
+
+* Install Shield
+* Clean Code
+* MIDAS Docs
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
