[#noissue] Update today studying

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -437,3 +437,64 @@ Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.
 * boost
   * asio
   * multi_index
+
+
+
+## 11.29
+
+* Clean Code
+* IFC Geometry Converter
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+
+
+### Lambda
+
+람다로 인해 함수의 파라미터로 함수를 넘길 수 있음을 기억하자!!  
+Factory 패턴에서도 map을 이용해 함수를 value로 받아 그 안에서 또 맵을 이용해 특정 Entity를 찾는 방법도 있다. 꽤 괜찮은 듯?  
+중요한 것은 함수를 인자로 넘겨 받을 수 있다는 사실을 아는 것이 중요.
+
+
+
+
+## 11.30
+
+* IFC Geometry Converter
+* unicode
+* C++ Basic
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+
+
+### C++ 다양한 초기화 방법
+
+* [C++ Basic](/contents/BasicEducation/CppBasic.md)
+
+### Unicode 분석
+
+* [Unicode](https://wnsgml972.github.io/encoding/encoding_unicode.html)
+
