[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -8,8 +8,52 @@
 
 ## 12.03
 
+* IFC Import 1D 마무리
+
+### 해야 할 것
+
 * IFC Geometry Converter
-* C++ Basic
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+
+
+
+## 12.04
+
+* IFC Import 2D
+* PR Day 준비
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+
+
+
+
+
+## 12.05
+
+* IFC Import 2D
+* PR Day
+* CPP Basic
 
 ### 해야 할 것
 
