[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -73,3 +73,33 @@
 ### C++ 다양한 초기화 방법
 
 * [C++ Basic](/contents/BasicEducation/CppBasic.md)
+
+
+
+
+
+
+## 12.06
+
+* IFC Import 2D
+* Solid Refactoring
+* CPP Basic
+
+### 해야 할 것
+
+* IFC Import 2D
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+
+
+### C++ 다양한 초기화 방법
+
+* [C++ Basic](/contents/BasicEducation/CppBasic.md)
