[#noissue] Update assert

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -103,3 +103,17 @@
 ### C++ 다양한 초기화 방법
 
 * [C++ Basic](/contents/BasicEducation/CppBasic.md)
+
+### ASSERT, assert, static_assert
+
+일단 기본적으로 assert는 조건 처리를 통해 거짓이 나올경우 프로그램을 그 지점에서 바로 중단시켜 준다. <br/>
+
+* 그렇기 때문에 디버깅 할 때 매우 편하다.
+* if 문을 통한 예외 처리 방식 보다는 때에 따라 assert를 넣는 것이 효과적이다.
+* 디버깅 모드에서만 프로그램이 중단된다.
+* 그 말은 Release 모드에서는 assert가 걸리지 않는다.
+* 보통 사용할 때 `assert(0);` 을 넣는데 그것 뿐만 아니라 조건 처리를 이용해 프로그램을 중단시킬 수 있음을 기억하자.
+
+ASSERT와 assert는 똑같다. 그러나 ASSERT는 mfc 함수 내에 전처리기로 정의되어 있는 듯 하다. assert는 헤더 파일에 따로 정의되어 있다. 범용적으로 사용하기 위해 assert를 사용하자.<br/><br/>
+
+assert와 ASSERT가 프로그램 런타임 시점에 조건에 의해 중단을 시켜준다면, static_assert는 컴파일 시점에 프로그램을 중단시켜준다. 역시 때에 따라 잘 사용하도록 하자.
