[#noissue] Update assert

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -70,12 +70,6 @@
   * multi_index
 
 
-### C++ 다양한 초기화 방법
-
-* [C++ Basic](/contents/BasicEducation/CppBasic.md)
-
-
-
 
 
 
@@ -100,11 +94,11 @@
   * multi_index
 
 
-### C++ 다양한 초기화 방법
+#### C++ 다양한 초기화 방법
 
 * [C++ Basic](/contents/BasicEducation/CppBasic.md)
 
-### ASSERT, assert, static_assert
+#### `ASSERT, assert, static_assert`
 
 일단 기본적으로 assert는 조건 처리를 통해 거짓이 나올경우 프로그램을 그 지점에서 바로 중단시켜 준다. <br/>
 
