[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -111,3 +111,27 @@
 ASSERT와 assert는 똑같다. 그러나 ASSERT는 mfc 함수 내에 전처리기로 정의되어 있는 듯 하다. assert는 헤더 파일에 따로 정의되어 있다. 범용적으로 사용하기 위해 assert를 사용하자.<br/><br/>
 
 assert와 ASSERT가 프로그램 런타임 시점에 조건에 의해 중단을 시켜준다면, static_assert는 컴파일 시점에 프로그램을 중단시켜준다. 역시 때에 따라 잘 사용하도록 하자.
+
+<br/>
+<hr/>
+
+## 12.06
+
+* IFC Import 2D
+* Solid Refactoring
+* [Modern C++ Framework 분석](/contents/BasicEducation/framework.md)
+
+### 해야 할 것
+
+* [Modern C++ Framework 분석](/contents/BasicEducation/framework.md)
+* IFC Import 2D
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
