[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -115,11 +115,35 @@ assert와 ASSERT가 프로그램 런타임 시점에 조건에 의해 중단을 
 <br/>
 <hr/>
 
-## 12.06
+## 12.10
 
 * IFC Import 2D
 * Solid Refactoring
 * [Modern C++ Framework 분석](/contents/BasicEducation/framework.md)
+
+### 해야 할 것
+
+* [Modern C++ Framework 분석](/contents/BasicEducation/framework.md)
+* IFC Import 2D
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+
+
+
+## 12.11
+
+* IFC Import 2D
+* Solid Refactoring
+* [Modern C++ Framework 분석](/contents/BasicEducation/framework.md)
+* [Naming](/contents/BasicEducation/Naming.md)
 
 ### 해야 할 것
 
