[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -147,7 +147,6 @@ assert와 ASSERT가 프로그램 런타임 시점에 조건에 의해 중단을 
 
 ### 해야 할 것
 
-* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
 * IFC Import 2D
 * Clean Code
 * Analytics Line
@@ -159,3 +158,28 @@ assert와 ASSERT가 프로그램 런타임 시점에 조건에 의해 중단을 
 * boost
   * asio
   * multi_index
+
+
+
+
+## 12.12
+
+* Modern C++ 이용해서 DPGet 개선
+* IFC Rebar 일단 할 수 있는 부분...
+
+### 해야 할 것
+
+* IFC Import 2D
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+
+
