[#noissue] Update yesterday, today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -183,3 +183,74 @@ assert와 ASSERT가 프로그램 런타임 시점에 조건에 의해 중단을 
 * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
 
 
+
+
+## 12.13
+
+* IFC Rebar refactoring
+
+### 해야 할 것
+
+* IFC Import 2D
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+* boost
+  * asio
+  * multi_index
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+
+
+### boost, typeindex -> 해당 타입을 런타임 중에도 정확하게 추론해준다.
+
+~~~cpp
+#include <boost/type_index.hpp>
+using namespace boost::typeindex;
+
+template<typename T>
+void f(const T& param)
+{
+    std::cout << type_id_with_cvr<T>().pretty_name() << std::endl;
+    std::cout << type_id_with_cvr<decltype(param)>().pretty_name() << std::endl;
+}
+
+//f() 호출하면
+//int
+//int const &
+//정확히 출력
+~~~
+
+
+
+
+
+## 12.14
+
+* IFC Rebar refactoring
+
+### 해야 할 것
+
+* IFC Import 2D
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+  * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* boost
+  * asio
+  * multi_index
+* [CodeQuality](/contents/BasicEducation/CodeQuality.md)
+
+
+
+### Code Quality
+
+* [CodeQuality](/contents/BasicEducation/CodeQuality.md)
+* 최종적으로는 개발자 간 코드 리뷰 시스템 도입
