[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -230,12 +230,18 @@ void f(const T& param)
 
 ## 12.14
 
-* IFC Rebar refactoring
+
+### 우선 순위
+
+* Ifc Export 기반 기술 확보
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
 
 ### 해야 할 것
 
-* IFC Import 2D
-* Clean Code
+* IFC Export 기반 기술 확보
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
 * Analytics Line
 * Cpp Basic
   * Thread
@@ -246,8 +252,7 @@ void f(const T& param)
 * boost
   * asio
   * multi_index
-* [CodeQuality](/contents/BasicEducation/CodeQuality.md)
-
+* [Code Review](/contents/BasicEducation/CodeReview.md)
 
 
 ### Code Quality
