[#noissue] Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -259,3 +259,33 @@ void f(const T& param)
 
 * [CodeQuality](/contents/BasicEducation/CodeQuality.md)
 * 최종적으로는 개발자 간 코드 리뷰 시스템 도입
+
+
+<br/>
+<hr/>
+
+## 12.17
+
+
+### 우선 순위
+
+* Ifc Export 기반 기술 확보
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+
+### 해야 할 것
+
+* IFC Export 기반 기술 확보
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+  * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
