Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -316,3 +316,35 @@ void f(const T& param)
   * asio
   * multi_index
 * [Code Review](/contents/BasicEducation/CodeReview.md)
+
+
+
+## 12.19
+
+### 우선 순위
+
+* Ifc Export 기반 기술 확보
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+
+### 해야 할 것
+
+* IFC Export 기반 기술 확보
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+  * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
+
+### github chart
+
+![gitgub](https://ghchart.rshah.org/wnsgml972)
