--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -323,10 +323,10 @@ void f(const T& param)
 
 ### 우선 순위
 
-* Ifc Export 기반 기술 확보
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* IFC Import 사용자 제공을 위한 테스트
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
 
 ### 해야 할 것
 
@@ -344,7 +344,38 @@ void f(const T& param)
   * multi_index
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 
+### [Clean Code](/contents/BasicEducation/CleanCode.md)
 
-### github chart
+### IFC Export
 
-![gitgub](https://ghchart.rshah.org/wnsgml972)
+기반 기술 확보, 일단 오픈 소스 기준 해당치까지는 구현... <br/>
+더 이상 개발 불가능...
+
+
+
+
+## 12.20
+
+### 우선 순위
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * filesystem
+  * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
