Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -379,3 +379,29 @@ void f(const T& param)
   * multi_index
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 
+
+
+## 12.21
+
+### 우선 순위
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
