Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -405,3 +405,9 @@ void f(const T& param)
   * multi_index
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 
+
+
+### 변환 행렬 공식...
+
+4 : 4 행렬 만들고, 단위행렬을 만든 뒤 4열의 {x, y, z, 1} 로 위치 이동을 시킬 수 있다. <br/>
+핵힘듬... 문제 알아내고 적용시켜서 해결하는데 오늘 하루 다썼는데 코드 정리해보니까 20줄도 안 됨...ㅋㅋㅋ
