--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -405,9 +405,36 @@ void f(const T& param)
   * multi_index
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 
-
-
 ### 변환 행렬 공식...
 
 4 : 4 행렬 만들고, 단위행렬을 만든 뒤 4열의 {x, y, z, 1} 로 위치 이동을 시킬 수 있다. <br/>
 핵힘듬... 문제 알아내고 적용시켜서 해결하는데 오늘 하루 다썼는데 코드 정리해보니까 20줄도 안 됨...ㅋㅋㅋ
+
+
+
+<br/>
+
+## 12.24
+
+### 우선 순위
+
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* IFC Import 사용자 제공을 위한 테스트 일단 현 이슈는 처리 완료ㅎㅎ..
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* Cpp17
+  * [Modern C++ Framework 구현 분석](/contents/BasicEducation/framework.md)
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
