--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -470,3 +470,33 @@ void f(const T& param)
 
 ### MArray 분석
 
+
+
+
+
+
+<br/>
+
+## 12.27
+
+### 우선 순위
+
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
+
+### [Code Review](/contents/BasicEducation/CodeReview.md)
+
