Update today studying

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -685,8 +685,7 @@ return true;
 
 
 ## 09.27
-
-* [Viusal 개발 기본 Setting](../VisualBasicSet.md)
+* [Viusal 개발 기본 Setting](/contents/BasicEducation/VisualBasicSet.md)
 * 코딩 규칙
   * 클래스를 넘길 때, 값에 의한 호출을 하면 클래스가 생성이 되므로, 복사생성자를 만들지 않았을 시 올바른 복사가 이루어지지 않는다. 때문에 클래스는 참조를 통해 넘기거나 복사생성자를 만들어야하는데, 값에 의한 호출의 경우 어차피 값이 바뀌지 않으니 참조와 const를 이용해 값을 넘겨 사용한다.
 * 박종봉 선배님
@@ -697,6 +696,5 @@ return true;
 
 
 ## 09.28
-
-* [Viusal 개발 기본 Setting](../VisualBasicSet.md)
-* [Basic Education](../BasicEducation/README.md)
+* [Viusal 개발 기본 Setting](/contents/BasicEducation/VisualBasicSet.md)
+* [Basic Education](/contents/BasicEducation/README.md)
