Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -500,3 +500,20 @@ void f(const T& param)
 
 ### [Code Review](/contents/BasicEducation/CodeReview.md)
 
+### Smart Pointer to Nomal Pointer
+
+1. `std::shared<int> intPointer; int *ipVal;`
+
+~~~cpp
+std::shared<int> intPointer;
+int *ipVal = intPointer.get();
+~~~
+
+2. `std::shared<int> intPointer; int intVal;`
+
+~~~cpp
+std::shared<int> intPointer;
+int ipVal = *intPointer;
+~~~
+
+<br/>
