Update today studying

--- a/contents/2018.12/12.md
+++ b/contents/2018.12/12.md
@@ -517,3 +517,36 @@ int ipVal = *intPointer;
 ~~~
 
 <br/>
+
+
+
+### Google 함수 별 퍼포먼스 측정이 가능한 benchmark
+
+구글의 gtest와 연동해서 동작이 가능하다. 오늘 Build 다 성공함!!
+
+
+
+
+
+<br/><hr/>
+
+## 12.31
+
+### 우선 순위
+
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
