--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -7,3 +7,23 @@
 <br/><br/>
 
 ## 01.02
+
+### 우선 순위
+
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Export, 기반작업
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
