--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -51,3 +51,49 @@
 
 
 ### 첫 인사 평가 준비
+
+
+<br/>
+<hr/>
+
+## 01.07
+
+### 우선 순위
+
+* 신입 사원 워크샵 사전 과제
+* 팀 내 워크샵 과제 준비
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Export, 기반작업
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
+
+### Enum Class
+
+* Enum의 범위를 제한하기 위해 Enum Class를 사용한다.
+* FeatureSolid 참조할 것
+
+~~~cpp
+class ABC
+{
+public:
+    enum class FileState { WRITE, READ };
+};
+
+int main()
+{
+    ABC::FileState file1 = ABC::FileState::WRITE;
+}
+~~~
