--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -102,7 +102,37 @@ int main()
 <br/>
 <hr/>
 
-## 01.07
+## 01.08
+
+### 우선 순위
+
+* 신입 사원 워크샵 사전 과제
+* 팀 내 워크샵 과제 준비
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### 해야 할 것
+
+* IFC Export, 기반작업
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
+
+### Git Branch 전략 조사
+
+
+
+<br/>
+
+## 01.09
 
 ### 우선 순위
 
