Update today studying

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -135,11 +135,12 @@ int main()
 ## 01.09
 
 ### 우선 순위
-
 * 신입 사원 워크샵 사전 과제
 * 팀 내 워크샵 과제 준비
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Jira](/contents/BasicEducation/Jira.md)
+* [Confluence](/contents/BasicEducation/Confluence.md)
 
 ### 해야 할 것
 
