--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -160,3 +160,36 @@ int main()
 ### Git Branch 전략 조사
 
 * [Git](/contents/BasicEducation/Git.md)
+
+
+
+
+<br/>
+
+## 01.10
+
+### 우선 순위
+* 팀 내 워크샵 과제 준비
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Jira](/contents/BasicEducation/Jira.md)
+* [Confluence](/contents/BasicEducation/Confluence.md)
+
+### 해야 할 것
+
+* IFC Export, 기반작업
+* IFC Import 사용자 제공을 위한 테스트
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+
+
+### Jira
+
+* [Jira](/contents/BasicEducation/Jira.md)
