Update today studying

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -220,3 +220,13 @@ int main()
   * multi_index
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 
+
+
+
+<br/>
+
+## 01.14
+
+### 신입사원 연수
+
+#### 성장
