Update today studying

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -230,3 +230,20 @@ int main()
 ### 신입사원 연수
 
 #### 성장
+
+#### 오픈 소스에 기여!
+
+* <https://github.com/ifcquery/ifcplusplus/pull/118>
+
+
+
+
+<br/>
+
+## 01.15
+
+### 신입사원 연수
+
+#### 전략적 사고
+
+#### 2W1H
