Update today studying

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -257,3 +257,18 @@ int main()
 ### 신입사원 연수
 
 #### OASIS를 통한 전략적 사고
+
+
+
+
+
+<br/>
+
+## 01.17
+
+### 신입사원 연수
+
+#### 전략적 사고의 과제 결과물 리뷰 
+* 외국인 임직원 프로세스 정립, 총 기간 6개월
+
+
