Update today studying

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -272,3 +272,38 @@ int main()
 * 외국인 임직원 프로세스 정립, 총 기간 6개월
 
 
+
+
+
+
+<br/>
+
+## 01.18
+
+### 신입사원 연수
+
+#### Inside MIDAS 과제 시작
+
+
+
+
+
+<br/>
+
+## 01.21
+
+### 신입사원 연수
+
+#### Inside MIDAS 과제 발표
+
+
+
+
+
+<br/>
+
+## 01.22
+
+### 신입사원 연수
+
+#### 소통법, 열정 토크쇼
