Update 3일동안 공부한 것들

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -307,3 +307,37 @@ int main()
 ### 신입사원 연수
 
 #### 소통법, 열정 토크쇼
+
+
+
+
+
+<br/>
+
+## 01.23
+
+### 신입사원 연수
+
+#### 소개 영상 제작
+
+
+
+<br/>
+
+## 01.24
+
+### 신입사원 연수
+
+#### 소개 영상 제작
+
+
+
+
+<br/>
+
+## 01.25
+
+### 신입사원 연수
+
+#### 전략적 사고 실무 과제 (자인 씨앗 육성하기) 기획
+
