Update today studying

--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -341,3 +341,14 @@ int main()
 
 #### 전략적 사고 실무 과제 (자인 씨앗 육성하기) 기획
 
+
+
+
+<br/>
+
+## 01.28
+
+### 신입사원 연수
+
+#### 전략적 사고 실무 과제 (자인 씨앗 육성하기) 기획
+
