--- a/contents/2019.01/01.md
+++ b/contents/2019.01/01.md
@@ -339,3 +339,18 @@ int main()
 ### 신입사원 연수
 
 #### 전략적 사고 실무 과제 (자인 씨앗 육성하기) 기획
+
+#### 내가 얻은 것
+* 기획법
+    * 브레인 스토밍의 여러 방법
+    * 기획 프로세스
+    * 여러가지 툴
+* 피피티 효과적인 여러 기술들
+    * 설득력있는 말하기+
+    * 인문/상경 계열 식 발표
+    * 통계 자료 증명
+    * CHO 발표 경험
+* 협업 능력 더 검증
+* 경영에 대해 조금...?
+
+
