--- a/contents/2019.02/02.md
+++ b/contents/2019.02/02.md
@@ -31,3 +31,23 @@
 
 ### 하반기 목표 설정
 
+
+<br/>
+
+
+## 02.07
+
+### 우선 순위
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Jira](/contents/BasicEducation/Jira.md)
+* [Confluence](/contents/BasicEducation/Confluence.md)
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### IFC Import 기능 개선
+
