--- a/contents/2019.02/02.md
+++ b/contents/2019.02/02.md
@@ -55,3 +55,30 @@
 * Feature Solid 기능 개선
 * Create Solid 오류 수정
 
+
+<br/>
+
+
+## 02.11
+
+### 우선 순위
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* [Jira](/contents/BasicEducation/Jira.md)
+* [Confluence](/contents/BasicEducation/Confluence.md)
+* IFC Import
+* IFC Export
+* Mesh Free
+* Analytics Line
+* Phase
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+
+### 한 것
+* IFC Import 기능 개선
+* Feature Solid 기능 개선
