Update today stuyding

--- a/contents/2019.02/02.md
+++ b/contents/2019.02/02.md
@@ -85,3 +85,29 @@
 * DevOps 전체 정리
 * Jira 정리
 * Confluence 정리
+
+
+
+
+<br/>
+
+
+## 02.11
+
+### 우선 순위
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* IFC Import
+* IFC Export
+* Mesh Free
+* Analytics Line
+* Phase
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### 한 것
+* IFC Import 기능 개선
