--- a/contents/2019.02/02.md
+++ b/contents/2019.02/02.md
@@ -32,8 +32,8 @@
 ### 하반기 목표 설정
 
 
-<br/>
 
+<br/>
 
 ## 02.07
 
@@ -56,8 +56,9 @@
 * Create Solid 오류 수정
 
 
-<br/>
 
+
+<br/>
 
 ## 02.11
 
@@ -91,7 +92,6 @@
 
 <br/>
 
-
 ## 02.12
 
 ### 우선 순위
@@ -113,8 +113,9 @@
 * IFC Import 기능 개선
 
 
-<br/>
 
+
+<br/>
 
 ## 02.13
 
@@ -129,10 +130,38 @@
   * multi_index
 
 ### Main
-* [건설] IFC
+* [건축] IFC
 * [기계] Mesh Free
 * [해석] Analytics Line
 * [기반] Phase, DB
 
 ### 한 것
 * IFC Import 기능 개선, 3D
+
+
+
+
+<br/>
+
+## 02.15
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### Main
+* [건축] IFC
+* [기계] Mesh Free
+* [해석] Analytics Line
+* [기반] Phase, DB
+
+### 한 것
+* IFC Import 기능 개선, 3D
+* IFC Unit Test
+* Phase 문서화
