--- a/contents/2019.02/02.md
+++ b/contents/2019.02/02.md
@@ -219,3 +219,29 @@
 ### 한 것
 * DevOps 일단 총 정리
 
+
+
+
+<br/>
+
+## 02.20
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### Main
+* [건축] IFC
+* [기계] Mesh Free
+* [해석] Analytics Line
+* [기반] Phase, DB
+
+### 한 것
+* Pair Programming 정리
+* Phase 인계
