--- a/contents/2019.02/02.md
+++ b/contents/2019.02/02.md
@@ -287,3 +287,27 @@
 * [기계] Mesh Free
 * [해석] Analytics Line
 * [기반] Phase, DB
+
+
+
+
+
+<br/>
+
+## 02.25
+
+### 공부, 정리할 것
+* Pair Programming
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### Main
+* [기계] Mesh Free
+* [해석] Analytics Line
+* [기반] Phase, DB
