--- a/contents/2019.03/03.md
+++ b/contents/2019.03/03.md
@@ -72,3 +72,29 @@
 * [해석] Analysis Line
 * [기계] Mesh
 * [기반] Phase, DB
+
+
+
+
+<br/>
+
+## 03.06
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* IFC Import 개선
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### Main
+* [해석] Analysis Line
+* [기계] Mesh
+* [기반] Phase, DB
+
+
