--- a/contents/2019.03/03.md
+++ b/contents/2019.03/03.md
@@ -150,7 +150,30 @@
 * [기반] Phase, DB
 
 
-### Commit Message
+### Commit Message Convention
 
+
+
+
+<br/>
+
+## 03.13
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* IFC Import 개선
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* Cpp Basic
+  * Thread
+  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
+* boost
+  * asio
+  * multi_index
+
+### Main
+* [기반] Phase, DB
+* [해석] Analysis Line
+* [기계] Mesh
 
 
