--- a/contents/2019.03/03.md
+++ b/contents/2019.03/03.md
@@ -318,17 +318,11 @@
 ## 03.25
 
 ### 공부, 정리할 것
-* Phase 분석...
+* Phase
 * Pair Programming [ Analysis Line ]
-* IFC Import 개선
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
-* Cpp Basic
-  * Thread
-  * async future <http://snowdeer.github.io/c++/2017/08/20/cpp11-future-and-async/>
-* boost
-  * asio
-  * multi_index
+
 
 ### Main
 * [기반] Phase, DB
