--- a/contents/2019.03/03.md
+++ b/contents/2019.03/03.md
@@ -334,3 +334,26 @@
 
 
 
+
+
+<br/>
+
+## 03.26
+
+### 공부, 정리할 것
+* Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+
+### Main
+* [기반] Phase, DB
+* [해석] Analysis Line
+* [기계] Mesher
+
+### Phase UI
+
+
+
+
