--- a/contents/2019.03/03.md
+++ b/contents/2019.03/03.md
@@ -341,7 +341,7 @@
 ## 03.26
 
 ### 공부, 정리할 것
-* Phase
+* Label Phase
 * Pair Programming [ Analysis Line ]
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
@@ -350,9 +350,55 @@
 ### Main
 * [기반] Phase, DB
 * [해석] Analysis Line
-* [기계] Mesher
 
 ### Widget의 생성과 동작
+
+
+
+
+
+<br/>
+
+## 03.27
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+
+### Main
+* [기반] Phase, DB
+* [해석] Analysis Line
+
+### MDay 준비
+
+
+
+
+
+
+
+
+<br/>
+
+## 03.28
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+
+### Main
+* [기반] Phase, DB
+* [해석] Analysis Line
+
+### MDay
+
+
 
 
 
