Update today studying

--- a/contents/2019.03/03.md
+++ b/contents/2019.03/03.md
@@ -379,8 +379,6 @@
 
 
 
-
-
 <br/>
 
 ## 03.28
@@ -400,6 +398,35 @@
 
 
 
+
+
+
+<br/>
+
+## 03.29
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+
+### Main
+* [기반] Phase, DB
+* [해석] Analysis Line
+
+
+### 실력의 정의
+* 알고리즘/하드웨어 최적화를 통해 느리지 않고 최대한의 퍼포먼스가 나올 수 있는 코드를 짜는 것
+* 알고 있는 지식이 많아 최소한의 레퍼런스를 참고해서 빨리 코드를 짜는 것
+* TDD/DDD를 적용해서 리팩토링 잘 하고, 군더더기 없이 깔끔한 코드를 짜는 것
+* 객체지향적인 설계 개념을 적용해서 패턴이 잘 적용되어 있는 클래스를 설계하는 것
+* 프레임워크 및 DB 세팅 잘 해서 DI/AOP/IoC등의 개념이 잘 들어 있는 코드를 짤 수 있는 것
+* 같이 일하는 사람과 문제 일으키지 않고 커뮤니케이션을 잘 해서 기간내에 일정 지연 없이 프로젝트 진행하는 것
+* 어느 정도 실무 경험이 있어서 프로젝트 분석/설계 잘 하고 프로젝트가 잘 마무리 할 수 있게 가끔 코딩도 해서 프로젝트를 진행하는 방법을 아는 것
+* 최신 기술 동향에 대해 잘 파악해서 기술 분석 및 장단점을 파악해서 내 프로젝트에 적용할 줄 아는 것
+* 기술 블로그 꾸준히 잘 쓰고 내가 잘 아는 기술을 컨퍼런스에서 발표 잘 하는 것
 
 
 
