Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -16,9 +16,23 @@
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 
 ### Main
-* [기반] Phase, DB
+* [기반] Phase, Alice UI, DB
 * [해석] Analysis Line
 
 
+
+<br/>
+
+## 04.02
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+* [해석] Analysis Line
 
 
