Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -18,6 +18,7 @@
 * [기반] Phase, Alice UI, DB
 * [해석] Analysis Line
 
+### Alice UI -> Label Widget 구현
 
 
 <br/>
@@ -32,3 +33,22 @@
 
 ### Main
 * [기반] Phase, Alice UI, DB
+
+### Alice UI -> Label Widget 구현
+
+
+
+<br/>
+
+## 04.03
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
+### Alice UI -> Label Widget 구현
