--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -103,3 +103,20 @@
 * [기반] Phase, Alice UI, DB
 
 ### Alice UI -> Label Widget 구현
+
+
+
+<br/>
+
+## 04.10
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
+### Alice UI -> Label Widget 구현
