Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -18,7 +18,8 @@
 * [기반] Phase, Alice UI, DB
 * [해석] Analysis Line
 
-### Alice UI -> Label Widget 구현
+### Alice UI
+* Point Widget
 
 
 <br/>
@@ -34,9 +35,9 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
-### Alice UI -> Label Widget 구현
-
-
+### Alice UI
+* Point Widget
+* Distance Widget
 
 <br/>
 
@@ -51,8 +52,9 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
-### Alice UI -> Label Widget 구현
-
+### Alice UI
+* Point Widget
+* Distance Widget
 
 
 <br/>
@@ -68,7 +70,10 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
-### Alice UI -> Label Widget 구현
+### Alice UI
+* Point Widget
+* Distance Widget
+* Angle Widget
 
 
 
@@ -85,7 +90,10 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
-### Alice UI -> Label Widget 구현
+### Alice UI
+* Point Widget
+* Distance Widget
+* Angle Widget
 
 
 
@@ -102,7 +110,11 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
-### Alice UI -> Label Widget 구현
+### Alice UI
+* Point Widget
+* Distance Widget
+* Angle Widget
+
 
 
 
@@ -119,4 +131,29 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
-### Alice UI -> Label Widget 구현
+### Alice UI
+* Point Widget
+* Distance Widget
+* Angle Widget
+* Diameter Widget
+
+
+
+<br/>
+
+## 04.11
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
+### Alice UI
+* Point Widget
+* Distance Widget
+* Angle Widget
+* Diameter Widget
