--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -157,3 +157,17 @@
 * Distance Widget
 * Angle Widget
 * Diameter Widget
+
+### 응용 프로그램에서 웹 기술 적용하기
+
+* CCIMStartPageView 참조
+
+#### 이용한 것
+* `CHtmlView` : 웹 페이지 띄우는 클래스
+* `JavaScript` : 동적인 웹 페이지 구성
+* `OnBeforeNavigate2` : 웹페이지 이벤트 발생 시 C++ 코드 호출
+* `OnGetExternal` : 웹페이지 이벤트 발생 시 C++ 코드 호출
+* `CWebPage` 클래스 : Code Project의 오픈소스
+* `CWebPage` 클래스의 `CallJScript` 호출 가능
+* `Crash Report` : 메일이나 서버로 데이터 보낼 수 있음, 오픈소스
+
