Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -171,3 +171,23 @@
 * `CWebPage` 클래스의 `CallJScript` 호출 가능
 * `Crash Report` : 메일이나 서버로 데이터 보낼 수 있음, 오픈소스
 
+
+
+<br/>
+
+## 04.12
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
+### Alice UI
+* Point Widget
+* Distance Widget
+* Angle Widget
+* Diameter Widget
