--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -192,3 +192,21 @@
 * Angle Widget
 * Diameter Widget
 * Ellipse Diameter Widget
+
+
+
+<br/>
+
+## 04.15
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
+### Alice UI
+* Widget들 정리
