Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -213,3 +213,22 @@
 
 ### 주니어 개발자의 성장에 대한 이야기, 함께 일하고 싶은 개발자
 * <https://speakerdeck.com/jaeyeophan/>
+
+
+
+
+<br/>
+
+## 04.16
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
+### Alice UI
+* Widget들 정리
