Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -232,3 +232,45 @@
 
 ### Alice UI
 * Widget들 정리
+
+
+## 렌더링 공부
+
+### Rasterization (래스터화)
+벡터 그래픽 이미지를 비디오 디스플레이나 프린터 등의 래스터 디바이스에 출력하기 위해 래스터 이미지로 변경하는 것
+
+### 벡터 이미지란?
+픽셀 데이터를 사용하는 래스터 파일과는 달리, 벡터 파일은 수학 공식을 사용하여 이미지를 렌더링하는 컴퓨터 그래픽입니다.
+
+장점
+* 확장성 – 벡터 파일은 어떤 크기에서도 항상 원본처럼 선명합니다. 위의 열대 패턴 이미지에서 확대된 부분을 확인해보세요.
+* 작은 파일 크기 – 벡터는 픽셀 대신 패스를 사용해서 픽셀화된 파일보다 크기가 훨씬 작습니다.
+* 편집 용이성 – 벡터 파일의 색상, 모양, 크기, 레이아웃 등을 조절할 수 있습니다.
+
+단점
+* 벡터 파일의 유일한 단점은 호환성입니다. Adobe Illustrator나 Sketch와 같은 벡터 기반 디자인 프로그램에서만 벡터 파일을 열 수 있습니다. Adobe Photoshop과 같은 래스터 기반 프로그램은 벡터 파일을 래스터화해서 그래픽을 신속하게 편집할 수는 없습니다.
+
+### 래스터 이미지란?
+래스터(비트맵) 파일은 여러 사각형 모양의 픽셀로 구성된 컴퓨터 그래픽으로 픽셀은 이미지의 각 점의 모양과 색상을 나타냅니다. 픽셀은 온라인에서 볼 수 있는 모든 이미지와 디자인의 기본 요소입니다. 아래 이미지를 확대하면 픽셀이 더욱 선명하게 보입니다.
+
+용도
+* 래스터 파일은 상세한 사진이나 디지털 응용 프로그램에 가장 적합합니다. 래스터 이미지의 픽셀은 고해상도 그래픽에서 색상 변화를 부드럽게 하고 디테일을 선명하게 보여줍니다. Adobe Photoshop이나 Shutterstock Editor와 같은 래스터 기반 디자인 프로그램으로 픽셀을 개별적으로 조정할 수 있습니다. 디자인 작업에 래스터 그래픽을 사용할 때는 화질 저하를 막으려면 항상 이미지의 크기를 작게만 조절해야 합니다.
+
+### Ref
+* <https://www.shutterstock.com/ko/blog/vector-file-formats-explained/>
+
+### 일반 벡터 파일 형식
+
+![Vector-Files_File-Formats.jpg](/media/2019/Vector-Files_File-Formats.jpg)
+
+#### .AI 파일
+AI(Adobe Illustrator Artwork) 파일은 Illustrator가 소유하고 있으며 일부 예외가 있기는 하지만 일반적으로 자체 프로그램으로 읽고 편집할 수 있습니다. Illustrator 이외에도 CorelDRAW로 이 파일 형식을 제한적으로 편집할 수 있습니다. 이 파일은 버전마다 달라서 같은 파일이어도 다른 버전의 Illustrator에서는 다르게 표시됩니다.
+
+#### .EPS 파일
+밀봉형 포스트스크립트(Encapsulated PostScript) 파일은 2차원 벡터 그래픽, 텍스트, 비트맵 이미지를 지원합니다. 이 파일 형식은 벡터 디자인을 내보내는 표준 방법으로 디자인 프로그램과 사용자 간 파일 전송 시 데이터 손실 없이 쉽게 전송할 수 있습니다.
+
+#### .SVG 파일
+SVG(Scalable Vector Graphic)는 벡터, 래스터 이미지, 텍스트로 구성된 이미지의 텍스트 기반 설명입니다. 해상도의 영향을 받지 않으며 고화질 이미지를 적은 용량의 파일로 만들 수 있어 웹에 이상적입니다.
+
+#### .PDF 파일
+PDF(Portable Document Format)는 벡터와 래스터 그래픽을 모두 표시할 수 있는 범용 표준 파일 형식입니다. 인쇄물 디자인이나 벡터 그래픽을 웹에 표시할 때 이 파일 형식을 사용할 할 수 있습니다.
