Update today studying

--- a/contents/2019.04/04.md
+++ b/contents/2019.04/04.md
@@ -274,3 +274,19 @@ SVG(Scalable Vector Graphic)는 벡터, 래스터 이미지, 텍스트로 구성
 
 #### .PDF 파일
 PDF(Portable Document Format)는 벡터와 래스터 그래픽을 모두 표시할 수 있는 범용 표준 파일 형식입니다. 인쇄물 디자인이나 벡터 그래픽을 웹에 표시할 때 이 파일 형식을 사용할 할 수 있습니다.
+
+
+
+
+<br/>
+
+## 04.17
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
