--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -21,3 +21,19 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 
+### Widget Preview 하이라이팅 기능 완성
+
+
+<br/>
+
+## 05.03
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+
