Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -37,3 +37,18 @@
 ### Main
 * [기반] Phase, Alice UI, DB
 * Clean Code, Code Review 준비하기
+
+
+<br/>
+
+## 05.08
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB
+* Clean Code, Code Review 준비하기
