Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -71,3 +71,21 @@
 * Clean Code, Code Review 준비하기
 
 ### Alice UI DB 설계
+
+
+
+<br/>
+
+## 05.10
+
+### 공부, 정리할 것
+* Label Phase
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+* Clean Code, Code Review 준비하기
+
+### Alice UI DB 설계
