--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -87,3 +87,22 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Alice UI DB 설계
+
+
+
+
+
+<br/>
+
+## 05.13
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Alice UI DB 설계
+
