--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -104,7 +104,7 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Alice UI DB 설계
+### OJT 발표 준비
 
 
 
@@ -121,5 +121,21 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Alice UI DB 설계
+### OJT 발표 준비
+
+
+
+<br/>
+
+## 05.15
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### OJT 발표 준비
 
