Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -156,3 +156,20 @@
 ### OJT 발표!!
 
 ### Alice UI Guide Widget DB 설계
+
+
+
+<br/>
+
+## 05.17
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Alice UI 생명주기 및 Phase Event 구조 파악
+
