Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -190,3 +190,22 @@
 
 ### Alice UI 생명주기 및 Phase Event 구조 파악
 
+
+
+
+
+<br/>
+
+## 05.21
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load
+
+
