Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -209,3 +209,33 @@
 ### LabelPhase Data DB Save/Load
 
 
+
+
+
+
+
+<br/>
+
+## 05.22
+
+### 2019 Unite Seoul! 컨퍼런스 참가
+
+
+
+
+
+<br/>
+
+## 05.23
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load
+
+
