Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -213,7 +213,6 @@
 
 
 
-
 <br/>
 
 ## 05.22
@@ -227,6 +226,25 @@
 <br/>
 
 ## 05.23
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load
+
+
+
+
+
+
+<br/>
+
+## 05.24
 
 ### 공부, 정리할 것
 * Pair Programming [ Analysis Line ]
