--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -257,3 +257,20 @@
 ### LabelPhase Data DB Save/Load
 
 
+
+
+<br/>
+
+## 05.27
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load
+
+
