--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -274,3 +274,20 @@
 ### LabelPhase Data DB Save/Load
 
 
+
+
+<br/>
+
+## 05.28
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load
+
+### 고교 개발자 대상 발표 준비
