--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -269,7 +269,7 @@
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 
 ### Main
-* [기반] Phase, Alice UI, DB, Select
+* [기반] Phase, Alice UI, DB, 3D CAD
 
 ### LabelPhase Data DB Save/Load
 
@@ -285,9 +285,9 @@
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 
-### Main
-* [기반] Phase, Alice UI, DB, Select
-
 ### LabelPhase Data DB Save/Load
 
 ### 고교 개발자 대상 발표 준비
+
+### Role 정의
+* [Clean Code](/contents/BasicEducation/Role.md)
