--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -291,3 +291,26 @@
 
 ### Role 정의
 * [Role](/contents/BasicEducation/Role.md)
+
+
+
+
+
+<br/>
+
+## 05.29
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### LabelPhase Data DB Save/Load
+* 1차 개발 완료
+
+### MDay 발표 준비
+
+### 고교 개발자 대상 발표 준비
+
+### Role 정의
+* [Role](/contents/BasicEducation/Role.md)
