Update today studying

--- a/contents/2019.05/05.md
+++ b/contents/2019.05/05.md
@@ -335,3 +335,19 @@
 
 ### Role 정의
 * [Role](/contents/BasicEducation/Role.md)
+
+
+
+<br/>
+
+## 05.31
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### LabelPhase Data DB Save/Load
+* 1차 개발 완료
+
+### 고교 개발자 대상 발표 준비
