--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -23,3 +23,21 @@
 
 ### 고교 개발자 대상 발표 준비
 
+
+
+<br/>
+
+## 06.03
+
+### 공부, 정리할 것
+* Pair Programming [ Analysis Line ]
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load Refactoring
+
+### 고교 개발자 대상 발표!
+
