Update today studying

--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -12,7 +12,6 @@
 ## 06.03
 
 ### 공부, 정리할 것
-* Pair Programming [ Analysis Line ]
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 
@@ -27,10 +26,9 @@
 
 <br/>
 
-## 06.03
+## 06.04
 
 ### 공부, 정리할 것
-* Pair Programming [ Analysis Line ]
 * [Code Review](/contents/BasicEducation/CodeReview.md)
 * [Clean Code](/contents/BasicEducation/CleanCode.md)
 
@@ -40,4 +38,20 @@
 ### LabelPhase Data DB Save/Load Refactoring
 
 ### 고교 개발자 대상 발표!
+
+
+
+
+<br/>
+
+## 06.05
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data DB Save/Load Refactoring
 
