--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -88,3 +88,18 @@
 ### LabelPhase Data DB Save/Load Refactoring
 
 
+
+<br/>
+
+## 06.12
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data 적용 및 검증
+
+
