--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -119,3 +119,20 @@
 ### LabelPhase Data 적용 및 검증
 
 
+
+
+
+<br/>
+
+## 06.14
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Data 적용 및 검증
+
+### 디버거를 사용한 예외관리
