--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -153,3 +153,21 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### LabelPhase Refactoring
+
+
+
+
+<br/>
+
+## 06.18
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Refactoring
+
+### Point Circle Label
