Update today studying

--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -171,3 +171,18 @@
 ### LabelPhase Refactoring
 
 ### Point Circle Label
+
+
+
+<br/>
+
+## 06.19
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Refactoring (Template 화)
