Update today studying

--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -202,3 +202,18 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### LabelPhase Refactoring (Template 화)
+
+
+
+<br/>
+
+## 06.21
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Dimension 검증
