--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -217,3 +217,18 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### LabelPhase Dimension 검증
+
+
+
+<br/>
+
+## 06.24
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Dimension 검증
