--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -232,3 +232,20 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### LabelPhase Dimension 검증
+
+
+
+<br/>
+
+## 06.25
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Dimension 검증
+
+### Virtual Query
