--- a/contents/2019.06/06.md
+++ b/contents/2019.06/06.md
@@ -249,3 +249,21 @@
 ### LabelPhase Dimension 검증
 
 ### Virtual Query
+
+
+
+<br/>
+
+## 06.26
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### LabelPhase Dimension 검증
+
+### MDay 준비 및 발표
+
