Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -52,3 +52,19 @@
 
 ### LabelPhase Dimension 검증
 ### 알고리즘 수정, 검증하며 생긴 문제점 수정
+
+
+
+
+<br/>
+
+## 07.04
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Angle Guide Widget 결함 수정
