--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -68,3 +68,5 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Angle Guide Widget 결함 수정
+### UI/UX 엔진 개발 중 (사용자를 생각하게 하지마라!)
+* https://brunch.co.kr/@bdh/41
