Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -67,6 +67,22 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Angle Guide Widget 결함 수정
+### LabelPhase Dimension 검증
 ### UI/UX 엔진 개발 중 (사용자를 생각하게 하지마라!)
 * https://brunch.co.kr/@bdh/41
+
+
+
+
+<br/>
+
+## 07.05
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Angle Guide Widget 결함 수정
