--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -86,3 +86,20 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Angle Guide Widget 결함 수정
+
+
+
+
+
+<br/>
+
+## 07.06
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 검증하며 발견한 케이스들 모두 테스트 코드 화
