Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -133,3 +133,19 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### 워크샵 준비
+
+
+
+
+<br/>
+
+## 07.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### 워크샵
