--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -149,3 +149,19 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### 워크샵
+
+
+
+
+<br/>
+
+## 07.15
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Clean Code
