Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -165,3 +165,20 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Clean Code
+
+
+
+
+<br/>
+
+## 07.16
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Clean Code
+
