Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -164,7 +164,7 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Clean Code
+### Phase 문서화
 
 
 
@@ -180,5 +180,22 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Clean Code
+### Phase 문서화
+
+
+
+
+
+<br/>
+
+## 07.17
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase 문서화
 
