--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -214,5 +214,26 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
+### uvw contribute
+### Phase 문서화
+
+
+
+
+
+
+
+<br/>
+
+## 07.19
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### uvw contribute
 ### Phase 문서화
 
