--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -293,3 +293,23 @@
 
 ### Phase 문서화 마무리 단계
 
+
+
+
+
+
+
+
+<br/>
+
+## 07.25
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase & Alice UI Guide Document for Developer ver1.0
+
