Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -313,3 +313,24 @@
 
 ### Phase & Alice UI Guide Document for Developer ver1.0
 
+
+
+
+
+
+
+
+
+<br/>
+
+## 07.26
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase JSon Loader
+
