Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -334,3 +334,24 @@
 
 ### Phase JSon Loader
 
+
+
+
+
+
+
+
+
+<br/>
+
+## 07.29
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Phase JSon Loader
+
