Update today studying

--- a/contents/2019.07/07.md
+++ b/contents/2019.07/07.md
@@ -376,4 +376,7 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### MDay 준비
-
+### 비가상인터페이스 패턴
+* https://yesarang.tistory.com/281
+* Interface를 만들 때 cpp에서는 꼭 모든 것이 public인 순수 가상 함수를 만들어 정의할 필요 없다.
+* 사용 여부에 따라 비가상인터페이스 패턴을 통해 좀 더 사용성 좋은 인터페이스 설계를 할 수가 있다.
