--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -21,3 +21,20 @@
 ### MDay
 ### Phase JSon Loader
 
+
+
+
+<br/>
+
+## 08.02
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Refactor DPool
+### Phase JSon Loader
+
