--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -54,3 +54,20 @@
 
 ### Database Reflection
 ### 경영회의
+
+
+
+
+
+<br/>
+
+## 08.05
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Database Reflection
