--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -52,7 +52,7 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Database Reflection
+### Database Bash
 ### 경영회의
 
 
@@ -70,4 +70,21 @@
 ### Main
 * [기반] Phase, Alice UI, DB, Select
 
-### Database Reflection
+### Database Bash
+
+
+
+
+
+<br/>
+
+## 08.06
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### Database Bash
