--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -88,3 +88,20 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### Database Bash
+
+
+
+
+
+<br/>
+
+## 08.07
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### opensource queryparse
