--- a/contents/2019.08/08.md
+++ b/contents/2019.08/08.md
@@ -122,3 +122,21 @@
 * [기반] Phase, Alice UI, DB, Select
 
 ### opensource queryparse
+
+
+
+
+
+<br/>
+
+## 08.09
+
+### 공부, 정리할 것
+* [Code Review](/contents/BasicEducation/CodeReview.md)
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+
+### Main
+* [기반] Phase, Alice UI, DB, Select
+
+### phase history
+### opensource queryparse
